src/test/deca/context/valid/class_decl/legacy_override.deca
// Description:
//    Héritage d'une classe
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

class A {
	void m() {
		println("Erreur");
	}
}

class B extends A {
	void m() {
		println("Ok");
	}
}

{
	B b;
	b.m();
}

