src/test/deca/context/invalid/class/class_decl/extends_next_class.deca
// Description:
//    héritage d'une classe déclarée après
//
// Resultats:
//    undefined class

class B extends A {}

class A {}

{}
